write to file done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,13 @@
         android:text="AJOUTER">
     </Button>
     <Button
+        android:id="@+id/btnSave"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Sauvegarder">
+    </Button>
+    <Button
         android:id="@+id/btnLister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
