--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,58 @@
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
     tools:context=".MainActivity">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_margin="15dp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/teal_700"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/gestion_inventaire"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/spinnerCateg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/categorie"
+            android:minHeight="50dp"
+            android:backgroundTint="@color/purple_500"
+            />
+
         <ListView
             android:id="@+id/listView"
             android:layout_width="wrap_content"
+            android:layout_height="400dp" />
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Sauvgarder"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:textSize="20sp"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="@color/white"
+            android:visibility="gone"
             />
     </LinearLayout>
+</ScrollView>
+
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
