--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:contentDescription="@string/categorie"
+
             android:minHeight="50dp"
             android:backgroundTint="@color/purple_500"
             />
@@ -41,19 +42,31 @@
         <ListView
             android:id="@+id/listView"
             android:layout_width="wrap_content"
-            android:layout_height="400dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            />
         <Button
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sauvgarder"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:padding="5dp"
             android:textSize="20sp"
             android:backgroundTint="@color/teal_700"
             android:textColor="@color/white"
             android:visibility="gone"
             />
+        <TextView
+            android:id="@+id/tvTotalMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
     </LinearLayout>
 </ScrollView>
 
