--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fillViewport="true">
+    android:fillViewport="true"
+   >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,9 +43,9 @@
         <ListView
             android:id="@+id/listView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            />
+            android:layout_weight="1"/>
         <Button
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
@@ -53,7 +54,7 @@
             android:layout_marginTop="15dp"
             android:padding="5dp"
             android:textSize="20sp"
-            android:backgroundTint="@color/teal_700"
+            android:backgroundTint="@color/purple_500"
             android:textColor="@color/white"
             android:visibility="gone"
             />
